Explore Page Media Queries

--- a/explore.html
+++ b/explore.html
@@ -140,7 +140,7 @@
 
         <div class="footerContent grid">
 
-            <div>
+            <div class ="footerUpperTitle">
                 <a href="#" class="footerLogo">Travel</a>
 
                 <p class="footerDescription">
