Changing Links Tag

--- a/popular.html
+++ b/popular.html
@@ -30,7 +30,7 @@
                     </li>
 
                     <li class="navItem">
-                        <a href="#" class="navLink">Explore</a>
+                        <a href="explore.html" class="navLink">Explore</a>
                     </li>
 
                 </ul>
