--- a/about.html
+++ b/about.html
@@ -22,9 +22,7 @@
                         <a href="index.html" class="navLink">Home</a>
                     </li>
 
-                    <li class="navItem">
-                        <a href="about.html" class="navLink">About</a>
-                    </li>
+                   
 
                     <li class="navItem">
                         <a href="popular.html" class="navLink">Popular</a>
@@ -32,6 +30,14 @@
 
                     <li class="navItem">
                         <a href="explore.html" class="navLink">Explore</a>
+                    </li>
+
+                    <li class="navItem">
+                        <a href="discover.html" class="navLink">Discover</a>
+                    </li>
+
+                    <li class="navItem">
+                        <a href="about.html" class="navLink">About</a>
                     </li>
 
                 </ul>
