adding content to popular page

--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
 
 
     <header class ="header" id="header">
-        <nav class="nav container">
+        <nav class="nav">
+            <div class="navbarcontent container">
             <a href="#" class="navLogo">
                 Travel
             </a>
@@ -53,6 +54,8 @@
             <div class="navToggle" id ="nav-Toggle">
                 <i class="fa-solid fa-bars"></i>
             </div>
+
+        </div>
         </nav>
     </header>
 
@@ -60,7 +63,7 @@
 
 <main class ="main">
 
-<section class="about section" id ="about">
+<!-- <section class="about section" id ="about">
 
     <div class="aboutContainer container grid">
 
@@ -91,16 +94,180 @@
 
     </div>
 
+</section> -->
+
+<section class="section" id="travelwithus">
+    <div class="container">
+        <div id="travelwithusheading">
+            <p class="text-center text-3xl mb-3">Why Travel with Us Travels ?</p>
+        </div>
+
+        <div id="travelwithuscontent" class="flex justify-between gap-3">
+
+           <div class="travelcard bg-slate-200 p-4 flex flex-col justify-center items-center ">
+                   <div class="travelcardimage">
+                 <img src="Images/travelwithuspicone.png" alt="" srcset="">
+                   </div>
+
+                   <div class="travelcardtext">
+                    <p class="text-center">
+                        04-Feb-1996 (21-Magh-2052)
+                    </p>
+                    <p class="text-center">Date of Establishment</p>
+                   </div>
+           </div>
+
+           <div class="travelcard bg-slate-200 p-4 flex flex-col justify-center items-center">
+            <div class="travelcardimage">
+          <img src="Images/travelwithuspictwo.png" alt="" srcset="">
+            </div>
+
+            <div class="travelcardtext">
+             <p class="text-center">
+                4495/052/53
+             </p>
+             <p class="text-center">Company Registration No</p>
+            </div>
+    </div>
+
+    <div class="travelcard bg-slate-200  p-4 flex flex-col justify-center items-center">
+        <div class="travelcardimage">
+      <img src="Images/travelwithuspicthree.png" alt="" srcset="">
+        </div>
+
+        <div class="travelcardtext">
+         <p class="text-center">
+            500066432
+         </p>
+         <p class="text-center">PAN No</p>
+        </div>
+</div>
+
+<div class="travelcard bg-slate-200 p-4 flex flex-col justify-center items-center">
+    <div class="travelcardimage">
+  <img src="Images/travelwithuspicfourth.png" alt="" srcset="">
+    </div>
+
+    <div class="travelcardtext">
+     <p class="text-center">
+        391/052
+     </p>
+     <p class="text-center">Tourism License No</p>
+    </div>
+</div>
+        </div>
+
+    </div>
+</section> 
+
+<section class="section" id="goal">
+    <div class="container">
+        <div class="goalcontent flex">
+
+            <div class="goalcard p-10 flex flex-col justify-center items-center">
+
+                <div class="goalimage">
+              <img src="Images/goalpicone.png" alt="" srcset="">
+                </div>
+
+                <div class="goaltext pt-3">
+            <h3 class="text-center">Vision</h3>
+            <p class="text-center pt-3">To be one of the leading corporate travel management agencies in the region by becoming client’s best partner providing best possible product with the highest quality of services</p>
+                </div>
+
+            </div>
+
+            <div class="goalcard p-10 flex flex-col justify-center items-center">
+
+                <div class="goalimage">
+              <img src="Images/goalpicone.png" alt="" srcset="">
+                </div>
+
+                <div class="goaltext pt-3">
+            <h3 class="text-center">Vision</h3>
+            <p class="text-center pt-3">To be one of the leading corporate travel management agencies in the region by becoming client’s best partner providing best possible product with the highest quality of services</p>
+                </div>
+
+            </div>
+
+            <div class="goalcard p-10 flex flex-col justify-center items-center">
+
+                <div class="goalimage">
+              <img src="Images/goalpicone.png" alt="" srcset="">
+                </div>
+
+                <div class="goaltext pt-3">
+            <h3 class="text-center">Vision</h3>
+            <p class="text-center pt-3">To be one of the leading corporate travel management agencies in the region by becoming client’s best partner providing best possible product with the highest quality of services</p>
+                </div>
+
+            </div>
+
+            
+        </div>
+    </div>
 </section>
 
+<section class="section" id="strength">
+    <div class="container">
+        <div class="strengthheading flex flex-col justify-center items-center text-center">
+            <img src="Images/ourstrength.png" alt="" srcset="">
+            <h3 class="text-slate-900 mt-4">Our Strength</h3>
+        </div>
 
+        <div class="strengthcontent flex justify-between">
+            
+        <div class="strengthcard flex flex-col justify-center items-center gap-3">
+            <div class="strengthcardimg">
+                <i class="fa-solid fa-money-check"></i>
+            </div>
+
+            <div class="strengthcardtext">
+              <p class="text-slate-900">Finanical Services</p>
+            </div>
+        </div>
+
+        <div class="strengthcard flex flex-col justify-center items-center gap-3">
+            <div class="strengthcardimg">
+                <i class="fa-solid fa-car"></i>
+            </div>
+
+            <div class="strengthcardtext">
+              <p class="text-slate-900">Automobiles</p>
+            </div>
+        </div>
+
+        <div class="strengthcard flex flex-col justify-center items-center gap-3">
+            <div class="strengthcardimg">
+                <i class="fa-solid fa-bahai"></i>
+            </div>
+
+            <div class="strengthcardtext">
+              <p class="text-slate-900">Energy</p>
+            </div>
+        </div>
+
+        <div class="strengthcard flex flex-col justify-center items-center gap-3">
+            <div class="strengthcardimg">
+                <i class="fa-solid fa-shopping-cart"></i>
+            </div>
+
+            <div class="strengthcardtext">
+              <p class="text-slate-900">Retails</p>
+            </div>
+        </div>
+
+    </div>
+
+    </div>
+</section>
 
 
 
 
 </main>
 
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="footerContainer container grid">
 
         <div class="footerContent grid">
@@ -222,7 +389,7 @@
 
         </div>
     </div>
-</footer>
+</footer> -->
 
 
 
@@ -236,6 +403,7 @@
 
 
     <script src="https://kit.fontawesome.com/8fc8e9b8a8.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.tailwindcss.com"></script> 
     <script src="about.js"></script>
 </body>
 </html>
