--- a/about.html
+++ b/about.html
@@ -184,8 +184,8 @@
                 </div>
 
                 <div class="goaltext pt-3">
-            <h3 class="text-center">Vision</h3>
-            <p class="text-center pt-3">To be one of the leading corporate travel management agencies in the region by becoming client’s best partner providing best possible product with the highest quality of services</p>
+            <h3 class="text-center">Mission</h3>
+            <p class="text-center pt-3">To deliver overall satisfaction to the clients by fulfilling their needs and exceeding their expectation</p>
                 </div>
 
             </div>
@@ -197,8 +197,8 @@
                 </div>
 
                 <div class="goaltext pt-3">
-            <h3 class="text-center">Vision</h3>
-            <p class="text-center pt-3">To be one of the leading corporate travel management agencies in the region by becoming client’s best partner providing best possible product with the highest quality of services</p>
+            <h3 class="text-center">Passion</h3>
+            <p class="text-center pt-3">Challenge ourselves everyday searching for the best travel value available for the clients</p>
                 </div>
 
             </div>
@@ -267,12 +267,17 @@
 
 </main>
 
-<!-- <footer class="footer">
+
+
+
+
+
+<footer class="footer">
     <div class="footerContainer container grid">
 
-        <div class="footerContent grid">
+        <div class="footerContent flex">
 
-            <div class="footerheading">
+            <div class ="footerUpperTitle">
                 <a href="#" class="footerLogo">Travel</a>
 
                 <p class="footerDescription">
@@ -388,12 +393,9 @@
 </span>
 
         </div>
+
     </div>
-</footer> -->
-
-
-
-
+</footer>
 
 
 
