--- a/explore.html
+++ b/explore.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <link rel="stylesheet" href="explore.css">
 </head>
 
